--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/rc-slider": "^9.3.1",
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.12",
-    "@types/uuid": "^8.3.1"
+    "@types/uuid": "^8.3.1",
+    "swiper": "^6.8.4"
   }
 }
